Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -777,8 +777,233 @@
             security: {
                 title: "Cybersecurity & C++ Quiz",
                 questions: [
-      { question: "What is IP Spoofing?", options: ["Using a static IP", "Faking a source IP address to mask the origin", "Encrypting an IP address", "Hiding an IP via a VPN"], correct: 1 },
-        { question: "How does HTTPS improve security?", options: ["Blocking IPs", "Speeding up data", "Encrypting data using SSL/TLS", "Using HTTP only"], correct: 2 },
+                     {
+        question: "What is the main function of the CPU in a Computer System?",
+        options: ["Storage of Data", "Execution of Instructions", "Display of Output", "Input of data"],
+        correct: 1
+    },
+    {
+        question: "Which component of a computer is responsible for storing data and program instructions that can be quickly accessed by the CPU?",
+        options: ["Hard Disk Drive", "CPU", "RAM", "ROM"],
+        correct: 2
+    },
+    {
+        question: "Which of the following is a non-volatile storage device that stores data even when the computer is turned off?",
+        options: ["RAM", "HDD", "CPU", "Cache Memory"],
+        correct: 1
+    },
+    {
+        question: "Which of the following is NOT an example of an input device?",
+        options: ["Keyboard", "Mouse", "Monitor", "Microphone"],
+        correct: 2
+    },
+    {
+        question: "What is the primary function of an Arithmetic Logic Unit (ALU) within the CPU?",
+        options: ["Control memory operations", "Perform arithmetic and logical operations", "Execute input/output operations", "Store data temporarily"],
+        correct: 1
+    },
+    {
+        question: "First generation of computers was based on which technology?",
+        options: ["Transistors", "LSI", "Vacuum Tubes", "VLSI"],
+        correct: 2
+    },
+    {
+        question: "Fifth generation computers are based on:",
+        options: ["Artificial Intelligence", "Programming Intelligence", "VVLSI", "System Knowledge"],
+        correct: 0
+    },
+    {
+        question: "What type of attack inundates a network or server with an excessive number of requests, rendering it inaccessible?",
+        options: ["Phishing", "Spoofing", "Brute Force", "DDoS"],
+        correct: 3
+    },
+    {
+        question: "What does the term 'Phishing' refer to in cybersecurity?",
+        options: ["Catching harmful software", "Creating secure passwords", "Deceptive attempt to obtain sensitive information", "Protecting against malware"],
+        correct: 2
+    },
+    {
+        question: "What is a firewall used for in a network?",
+        options: ["Protect against physical damage", "Block unauthorized access", "Enhance internet speed", "Improve network aesthetics"],
+        correct: 1
+    },
+    {
+        question: "The basic architecture of the modern computer was developed by:",
+        options: ["John Von Neumann", "Charles Babbage", "Blaise Pascal", "Gordon Moore"],
+        correct: 0
+    },
+    {
+        question: "Which of the following is the fastest form of memory?",
+        options: ["RAM", "Cache Memory", "Hard Disk", "SSD"],
+        correct: 1
+    },
+    {
+        question: "What does 'ROM' stand for?",
+        options: ["Read-Only Memory", "Random-Only Memory", "Read-Once Memory", "Random-Online Memory"],
+        correct: 0
+    },
+    {
+        question: "Second-generation computers were based on which technology?",
+        options: ["Vacuum Tubes", "Integrated Circuits", "Transistors", "Microprocessors"],
+        correct: 2
+    },
+    {
+        question: "A malicious software that disguises itself as a legitimate program is known as a:",
+        options: ["Worm", "Trojan Horse", "Spyware", "Ransomware"],
+        correct: 1
+    },
+    {
+        question: "Which component is often referred to as the 'brain' of the computer?",
+        options: ["Motherboard", "RAM", "CPU", "Power Supply"],
+        correct: 2
+    },
+    {
+        question: "Which of the following is an example of an output device?",
+        options: ["Scanner", "Webcam", "Printer", "Joystick"],
+        correct: 2
+    },
+    {
+        question: "The technology used in third-generation computers was:",
+        options: ["Transistors", "Vacuum Tubes", "Artificial Intelligence", "Integrated Circuits"],
+        correct: 3
+    },
+    {
+        question: "What is the purpose of the Control Unit (CU) within the CPU?",
+        options: ["Perform calculations", "Store results", "Direct and coordinate all computer operations", "Connect to peripheral devices"],
+        correct: 2
+    },
+    {
+        question: "Which type of memory is volatile, meaning its contents are lost when the power is turned off?",
+        options: ["ROM", "RAM", "SSD", "Flash Drive"],
+        correct: 1
+    },
+    {
+        question: "An attack where an attacker impersonates a legitimate entity to trick a user into revealing credentials is called:",
+        options: ["DDoS", "Spoofing", "Malware", "Firewalling"],
+        correct: 1
+    },
+    {
+        question: "The use of microprocessors is a characteristic of which generation of computers?",
+        options: ["Second Generation", "Third Generation", "Fourth Generation", "First Generation"],
+        correct: 2
+    },
+    {
+        question: "Which of these is responsible for booting up the computer?",
+        options: ["Operating System", "Application Software", "BIOS/UEFI", "RAM"],
+        correct: 2
+    },
+    {
+        question: "What is 'Malware' a shorthand for?",
+        options: ["Manual Software", "Malicious Software", "Mainframe Software", "Macro Software"],
+        correct: 1
+    },
+    {
+        question: "Which of the following is both an input and an output device?",
+        options: ["Monitor", "Touchscreen", "Keyboard", "Speaker"],
+        correct: 1
+    },
+    {
+        question: "The process of encoding information to prevent unauthorized access is known as:",
+        options: ["Decryption", "Authentication", "Encryption", "Firewall"],
+        correct: 2
+    },
+    {
+        question: "Who is known as the 'Father of the Computer'?",
+        options: ["Alan Turing", "John Von Neumann", "Charles Babbage", "Tim Berners-Lee"],
+        correct: 2
+    },
+    {
+        question: "A single binary digit (0 or 1) is called a:",
+        options: ["Byte", "Bit", "Nibble", "Word"],
+        correct: 1
+    },
+    {
+        question: "An attack that tries every possible password combination to gain access is called a:",
+        options: ["Phishing attack", "Brute Force attack", "Spoofing attack", "DDoS attack"],
+        correct: 1
+    },
+    {
+        question: "Which part of the computer system manages all of the software and hardware?",
+        options: ["CPU", "Application Software", "Operating System", "RAM"],
+        correct: 2
+    },
+    {
+        question: "Which protocol is fundamental for browsing websites on the internet?",
+        options: ["FTP", "SMTP", "HTTP/HTTPS", "TCP"],
+        correct: 2
+    },
+    {
+        question: "A collection of 8 bits is known as a:",
+        options: ["Record", "Nibble", "Word", "Byte"],
+        correct: 3
+    },
+    {
+        question: "What does ULSI, a technology of the fifth generation, stand for?",
+        options: ["Ultra Large Scale Integration", "Ultra Light System Interface", "Universal Large Scale Internet", "Unique Logic System Integration"],
+        correct: 0
+    },
+    {
+        question: "Software that is secretly installed on a computer to collect information about the user without their knowledge is called:",
+        options: ["Adware", "Spyware", "Ransomware", "Firmware"],
+        correct: 1
+    },
+    {
+        question: "The physical components of a computer system are referred to as:",
+        options: ["Software", "Firmware", "Hardware", "Middleware"],
+        correct: 2
+    },
+    {
+        question: "What is a 'zombie computer' in the context of cybersecurity?",
+        options: ["A computer that has been disposed of", "A computer infected with malware and controlled by an attacker as part of a botnet", "A computer that cannot be turned on", "A computer with an outdated operating system"],
+        correct: 1
+    },
+    {
+        question: "What is the difference between a compiler and an interpreter?",
+        options: ["A compiler is faster than an interpreter", "A compiler translates the entire program at once, while an interpreter translates it line by line", "An interpreter produces an executable file, a compiler does not", "There is no difference"],
+        correct: 1
+    },
+    {
+        question: "In networking, what is the role of a DNS (Domain Name System)?",
+        options: ["To encrypt network traffic", "To assign IP addresses to devices", "To translate human-readable domain names into machine-readable IP addresses", "To filter malicious websites"],
+        correct: 2
+    },
+    {
+        question: "Which attack involves an attacker secretly relaying and possibly altering the communication between two parties who believe they are directly communicating?",
+        options: ["Man-in-the-Middle (MITM) attack", "Phishing attack", "SQL Injection", "Cross-Site Scripting (XSS)"],
+        correct: 0
+    },
+    {
+        question: "The clock speed of a CPU is typically measured in what unit?",
+        options: ["Gigabytes (GB)", "Megabits per second (Mbps)", "Dots per inch (DPI)", "Gigahertz (GHz)"],
+        correct: 3
+    },
+    {
+        question: "What type of software is designed to encrypt files on a user's computer and demand payment for their decryption?",
+        options: ["Spyware", "Adware", "Ransomware", "Worm"],
+        correct: 2
+    },
+    {
+        question: "What is the function of the motherboard in a computer?",
+        options: ["To perform calculations", "To connect all the main components of the computer together", "To provide long-term storage", "To cool the CPU"],
+        correct: 1
+    },
+    {
+        question: "In computer memory, what does 'cache' refer to?",
+        options: ["Long-term, high-capacity storage", "A smaller, faster memory that stores copies of data from frequently used main memory locations", "Read-Only Memory used for booting", "The main working memory of the computer"],
+        correct: 1
+    },
+    {
+        question: "What is the primary characteristic of 'open-source software'?",
+        options: ["It is always free of charge", "It is only compatible with Linux", "Its source code is available to the public for modification and distribution", "It is developed by a single person"],
+        correct: 2
+    },
+    {
+        question: "Which of these is a secure protocol for encrypting data sent over the internet, often indicated by a padlock icon in the browser?",
+        options: ["FTP", "HTTP", "SSL/TLS (used in HTTPS)", "TELNET"],
+        correct: 2
+    }
+    ,{ question: "What is IP Spoofing?", options: ["Using a static IP", "Faking a source IP address to mask the origin", "Encrypting an IP address", "Hiding an IP via a VPN"], correct: 1 },
+    { question: "How does HTTPS improve security?", options: ["Blocking IPs", "Speeding up data", "Encrypting data using SSL/TLS", "Using HTTP only"], correct: 2 },
         { question: "Which of these is a core security principle ensuring confidentiality, integrity, and availability?", options: ["TTL", "OSI triad", "CIA triad", "AAA"], correct: 2 },
         { question: "What does social engineering primarily target?", options: ["Human vulnerabilities", "Router firmware", "Network hardware", "Antivirus software"], correct: 0 },
         { question: "What is a brute-force attack?", options: ["Spoofing IP addresses", "Overloading network devices", "Social engineering via email", "Repeatedly trying passwords or passphrases until successful"], correct: 3 },
